# lm15-python

./: .gitignore  404.html  CHANGELOG.md  CONTRACT_PIN  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tmp.md
.github/workflows/: docs.yml  python.yml  python2.yml
benchmarks/: BENCHMARKS.md  RESULTS.json  _bench_lib.py  bench_ttfr_local.py  cold_start.sh  index.html
benchmarks/results/: gemini-20260607T123337Z.jsonl  gemini-latest.jsonl  groq-20260607T123513Z.jsonl  groq-latest.jsonl  local-20260607T123157Z.jsonl  local-latest.jsonl  openai-20260607T123221Z.jsonl  openai-latest.jsonl
completeness/: spec_matrix.json
conformance/: README.md  check_request_fixtures.py  check_serde_fixtures.py  response_fixtures.py  run_offline.sh
cookbooks/: index.html
design-rationale/: index.html
docs/: API_SPEC_V2.md  COMPLETENESS.md  CONTRACT.md  DESIGN_ROUTING.md  DESIGN_TRANSPORT.md  DESIGN_V3.md  ERRORS.md  GETTING_STARTED.md  PORTABILITY.md  benchmarks.md  cookbook-all-features.md  cookbook-gemini-live.md  design-rationale.md  getting-started.md  how-lm15-is-specified.md  index.md  mapping-rules.md  model-hydration.md  roadmap.md  router-portability.md  serde-rules.md  tools-from-functions.md  using-the-router.md  using-the-transports.md  using-the-type-system.md
examples/: 01_basic_text.py  02_streaming.py  03_tools.py  04_multimodal.py  06_reliability.py
getting-started/: index.html
how-lm15-is-specified/: index.html
lm15/: __init__.py  api.py  auth.py  capabilities.py  client.py  compat.py  conversation.py  cost.py  errors.py  factory.py  features.py  live.py  middleware.py  model.py  model_catalog.py  models.py  repl.py  result.py  router.py  serde.py  sse.py  stream.py  tools.py  types.py  vet.py
mapping-rules/: index.html
model-hydration/: index.html
notes/: response-fixture-coverage.md
roadmap/: index.html
router-portability/: index.html
search/: search_index.json
serde-rules/: index.html
spec/: README.md
tests/: test_api_papercuts.py  test_api_v2.py  test_api_v3.py  test_async_adapters.py  test_client_middleware.py  test_conformance.py  test_contract.py  test_cost.py  test_cost_tracking.py  test_errors.py  test_frozen_fixtures.py  test_live_completion.py  test_live_no_loop.py  test_live_runtime.py  test_may_feature_serde.py  test_model_hydration.py  test_number_semantics.py  test_omission_rule.py  test_openai_chat.py  test_portability_spec.py  test_providers.py  test_repl_errors.py  test_result.py  test_router.py  test_spec_decisions_1_0.py  test_stream_coalesce.py  test_stream_message_delta.py  test_subscription_auth.py  test_tools.py  test_usage_none.py  test_vet_shim.py
tools-from-functions/: index.html
using-model-profiles/: index.html
using-the-a-provider/: index.html
using-the-router/: index.html
using-the-transports/: index.html
using-the-type-system/: index.html
(+196 files in other folders)
