[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lm15"
version = "0.2.0"
description = "Universal LM core with pluggable provider adapters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Maxime Rivest", email = "mrive052@gmail.com" }
]
keywords = ["llm", "ai", "openai", "anthropic", "gemini", "adapters", "streaming"]
license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
speed = ["pycurl>=7.45.0"]
dev = [
  "pycurl>=7.45.0",
  "build>=1.2.2",
  "twine>=5.1.1"
]

[project.urls]
Homepage = "https://github.com/MaximeRivest/lm15"
Documentation = "https://github.com/MaximeRivest/lm15"
Issues = "https://github.com/MaximeRivest/lm15/issues"

[project.entry-points."lm15.providers"]
openai = "lm15.providers.openai:OpenAIAdapter"
anthropic = "lm15.providers.anthropic:AnthropicAdapter"
gemini = "lm15.providers.gemini:GeminiAdapter"

[tool.hatch.build.targets.wheel]
packages = ["lm15"]

[tool.hatch.build.targets.sdist]
include = [
  "lm15",
  "tests",
  "docs",
  "examples",
  "completeness",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml"
]
